--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
         android:src="@drawable/car" />
 
     <EditText
-        android:id="@+id/lastNameText"
+        android:id="@+id/usernameText"
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_alignEnd="@+id/imageView9"
