--- a/app/src/main/res/layout/activity_price.xml
+++ b/app/src/main/res/layout/activity_price.xml
@@ -15,6 +15,18 @@
         android:layout_centerHorizontal="true"
         android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/partidaTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/latoblack"
+            android:paddingLeft="5dp"
+            android:paddingTop="20dp"
+            android:paddingRight="5dp"
+            android:text="@string/RidePriceText"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
         <ImageView
             android:id="@+id/remove"
             android:layout_width="42dp"
@@ -55,6 +67,19 @@
             android:background="@android:color/transparent"
             android:text="@string/price"
             />
+
+        <TextView
+            android:id="@+id/euroText"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/priceText"
+            android:layout_marginTop="192dp"
+            android:background="@android:color/transparent"
+            android:clickable="false"
+            android:ems="10"
+            android:text="@string/currency"
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
     </RelativeLayout>
 
