--- a/app/src/main/res/layout/activity_seats.xml
+++ b/app/src/main/res/layout/activity_seats.xml
@@ -16,6 +16,18 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/partidaTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/latoblack"
+            android:paddingLeft="5dp"
+            android:paddingTop="20dp"
+            android:paddingRight="5dp"
+            android:text="@string/RideSeatsText"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
+        <TextView
             android:id="@+id/seatsText"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
